# larch

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  install.sh  larch-spec-v1.0.md
.github/workflows/: release.yml
.larch/: vault.json
docs/: impl_v0.1.0.md  impl_v0.2.0.md  spec-v0.1.0-support-meta.md  spec-v0.2.0.md
scripts/: build-release.sh
src/: assets.rs  client.rs  config.rs  document.rs  import.rs  index.rs  lib.rs  lockfile.rs  main.rs  mcp.rs  parser.rs  server.rs  service.rs  tag.rs  tree.rs  utils.rs  watcher.rs
